# SmetaBot

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_ASCII.md  DB-DESIGN.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  Makefile  PROJECT_SCHEMAS.md  PROJECT_TZ.md  README.md  SYSTEM_ARCHITECTURE_FLOW.md  TECHNICAL_SPECIFICATION.md  TESTING_STATS.md  USER_FLOW_ASCII.md  backend.Dockerfile  bot.Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-compose.yml.backup  login_userbot.py  query.sql  request.json  scenariy.md  test_api.py  test_request.json  test_tmp.py  userbot.Dockerfile  worker.Dockerfile
.cursor/rules/: arc.mdc
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  db.py  deps.py  main.py
backend/app/routers/: yookassa.py
bot/: celery_client.py  config.py  main.py  requirements.txt  storage.py
bot/backend_client.py/: backend_client.py
bot/handlers/: access.py  channel_wizard.py  documents.py  finalize.py  invite_manage.py  invites.py  join_requests.py  menu.py  menu_common.py  menu_contractor.py  menu_owner.py  my_channels.py  profile.py  render_pdf.py  reply_menu.py  rooms.py  start.py  stats.py  subscription.py  webapp.py  webapp_gate.py
bot/services/: __init__.py  admin.py  analytics.py  billing.py  channels.py  clients.py  contractors.py  db.py  (+6 more)
ci/: github-actions.yml
common/: __init__.py  preview.py  watermark.py
notes/: SESSION.md
sessions/: userbot.session  userbot.session-journal
userbot/: api.py  config.py  login.py  main.py  requirements.txt
worker/: celery_app.py  main.py  metrics.py  requirements.txt
(+27 files in other folders)
