[tool.poetry]
name = "smetabot-backend"
version = "0.1.0"
description = "Backend API for SmetaBot"
authors = ["You <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
pydantic = "^2.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
